# xl2jsonl

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/xl2jsonl/: __init__.py  chunker.py  cli.py  exceptions.py  loader.py  models.py  writer.py
tests/: conftest.py  test_chunker.py  test_cli.py  test_integration.py  test_loader.py  test_writer.py
