[project]
name = "xl2jsonl"
version = "0.1.0"
description = "Convert Excel files to JSONL with robust merged-cell handling"
requires-python = ">=3.10"
dependencies = [
    "python-calamine>=0.2.0",
    "openpyxl>=3.1.0",
    "click>=8.0",
    "orjson>=3.9",
]

[project.scripts]
xl2jsonl = "xl2jsonl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xl2jsonl"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
