[project]
name = "xl2jsonl"
version = "0.1.1"
description = "Convert Excel files to JSONL with robust merged-cell handling"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Abhijit Choudhury" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: File Formats",
    "Topic :: Utilities",
]
dependencies = [
    "python-calamine>=0.2.0",
    "openpyxl>=3.1.0",
    "click>=8.0",
    "orjson>=3.9",
]

[project.urls]
Homepage = "https://github.com/abhijit-choudhury/xl2jsonl"
Repository = "https://github.com/abhijit-choudhury/xl2jsonl"
Issues = "https://github.com/abhijit-choudhury/xl2jsonl/issues"

[project.scripts]
xl2jsonl = "xl2jsonl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xl2jsonl"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
